Fix vertical alignment issue for i element

--- a/less/custom.less
+++ b/less/custom.less
@@ -179,6 +179,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
   i,
   .svg-inline--fa {
+    // Fix vertical alignment issue for i element
+    display: inline;
+
     // Reproduce Rhythm formatting for .mobile-nav .fa
     height: 100%;
     vertical-align: middle;
